# APython-Libs

./: .gitignore  README.md  README.md.template  build.py  buildutils.py  cache.py  config.cfg  config.py  configExample.cfg  index.html  index.json  libraries.cfg  logger.py
buildFiles/BZip/: CMakeLists.txt
buildFiles/FFI/: CMakeLists.txt
buildFiles/NCurses/: CMakeLists.txt
buildFiles/Pixman/: CMakeLists.txt
buildFiles/Python2.7.2/: CMakeLists.txt
buildFiles/Python3.10.4/: CMakeLists.txt
buildFiles/Python3.4.7/: CMakeLists.txt
buildFiles/Readline/: CMakeLists.txt
buildFiles/SDL2/: CMakeLists.txt
buildFiles/SDL2_gpu/: CMakeLists.txt
buildFiles/SDL2_ttf/: CMakeLists.txt
buildFiles/Tcl/: CMakeLists.txt
buildFiles/Tk/: CMakeLists.txt
files/: Android.mk  Application.mk  bzip-Android.mk  config.c  config3.c  ffi-Android.mk  fficonfig.h  module-Android.mk  openSSL-Android.mk  pyconfig.h  rc4-md5-x86_64.S
files/SDL2/: Android.mk  patch.diff
files/SDL2_gpu/: Android.mk  patch.diff
files/SDL2_image/: Android.mk
files/SDL2_mixer/: Android.mk  patch.diff
files/SDL2_net/: Android.mk
files/SDL2_ttf/: Android.mk  patch.diff
files/bzip/: Android.mk
files/ffi/: Android.mk  ffi-Android.mk  patch.diff
files/ncurses/: Android.mk  patch.diff
files/openSSL/: Android.mk  openSSL-Android.mk  patch.diff
files/pixman/: Android.mk  config.h  patch.diff
files/readline/: Android.mk  patch.diff
files/tcl/: Android.mk  patch.diff  tclConfig.h
files/tk/: Android.mk  patch.diff  tkConfig.h
modules/PythonPatch/: Android.mk  CMakeLists.txt  redirects.c  redirects.h
patches/: Python3.10.4.patch  Python3.4.7.patch  SDL2.patch  SDL2_gpu.patch  SDL2_ttf.patch  ffi.patch  ncurses.patch  openSSL.patch  pixman.patch  python2.7.2.patch  python3.4.3.patch  readline.patch  tcl.patch  tk.patch
