cmake_minimum_required(VERSION 3.4.1)
project(NCurses C)

add_definitions(-DHAVE_CONFIG_H -DNDEBUG)

add_library(ncurses SHARED
        source/ncurses/build.priv.h source/ncurses/codes.c
        source/ncurses/comp_captab.c source/ncurses/comp_captab.c
        source/ncurses/expanded.c source/ncurses/fallback.c
        source/ncurses/fifo_defs.h source/ncurses/init_keytry.h
        source/ncurses/lib_gen.c source/ncurses/lib_keyname.c
        source/ncurses/llib-lncurses source/ncurses/llib-lncursest
        source/ncurses/llib-lncursestw source/ncurses/llib-lncursesw
        source/ncurses/llib-ltic source/ncurses/llib-ltict
        source/ncurses/llib-lticw source/ncurses/llib-ltictw
        source/ncurses/llib-ltinfo source/ncurses/llib-ltinfot
        source/ncurses/llib-ltinfotw source/ncurses/llib-ltinfow
        source/ncurses/names.c source/ncurses/SigAction.h
        source/ncurses/unctrl.c source/ncurses/wcwidth.h
        source/ncurses/base/define_key.c source/ncurses/base/key_defined.c
        source/ncurses/base/keybound.c source/ncurses/base/keyok.c
        source/ncurses/base/legacy_coding.c source/ncurses/base/lib_addch.c
        source/ncurses/base/lib_addstr.c source/ncurses/base/lib_beep.c
        source/ncurses/base/lib_bkgd.c source/ncurses/base/lib_box.c
        source/ncurses/base/lib_chgat.c source/ncurses/base/lib_clear.c
        source/ncurses/base/lib_clearok.c source/ncurses/base/lib_clrbot.c
        source/ncurses/base/lib_clreol.c source/ncurses/base/lib_color.c
        source/ncurses/base/lib_colorset.c source/ncurses/base/lib_delch.c
        source/ncurses/base/lib_delwin.c source/ncurses/base/lib_dft_fgbg.c
        source/ncurses/base/lib_echo.c source/ncurses/base/lib_endwin.c
        source/ncurses/base/lib_erase.c source/ncurses/base/lib_flash.c
        source/ncurses/base/lib_freeall.c source/ncurses/base/lib_getch.c
        source/ncurses/base/lib_getstr.c source/ncurses/base/lib_hline.c
        source/ncurses/base/lib_immedok.c source/ncurses/base/lib_inchstr.c
        source/ncurses/base/lib_initscr.c source/ncurses/base/lib_insch.c
        source/ncurses/base/lib_insdel.c source/ncurses/base/lib_insnstr.c
        source/ncurses/base/lib_instr.c source/ncurses/base/lib_isendwin.c
        source/ncurses/base/lib_leaveok.c source/ncurses/base/lib_mouse.c
        source/ncurses/base/lib_move.c source/ncurses/base/lib_mvwin.c
        source/ncurses/base/lib_newterm.c source/ncurses/base/lib_newwin.c
        source/ncurses/base/lib_nl.c source/ncurses/base/lib_overlay.c
        source/ncurses/base/lib_pad.c source/ncurses/base/lib_printw.c
        source/ncurses/base/lib_redrawln.c source/ncurses/base/lib_refresh.c
        source/ncurses/base/lib_restart.c source/ncurses/base/lib_scanw.c
        source/ncurses/base/lib_screen.c source/ncurses/base/lib_scroll.c
        source/ncurses/base/lib_scrollok.c source/ncurses/base/lib_scrreg.c
        source/ncurses/base/lib_set_term.c source/ncurses/base/lib_slk.c
        source/ncurses/base/lib_slkatr_set.c source/ncurses/base/lib_slkatrof.c
        source/ncurses/base/lib_slkatron.c source/ncurses/base/lib_slkatrset.c
        source/ncurses/base/lib_slkattr.c source/ncurses/base/lib_slkclear.c
        source/ncurses/base/lib_slkcolor.c source/ncurses/base/lib_slkinit.c
        source/ncurses/base/lib_slklab.c source/ncurses/base/lib_slkrefr.c
        source/ncurses/base/lib_slkset.c source/ncurses/base/lib_slktouch.c
        source/ncurses/base/lib_touch.c source/ncurses/base/lib_ungetch.c
        source/ncurses/base/lib_vline.c source/ncurses/base/lib_wattroff.c
        source/ncurses/base/lib_wattron.c source/ncurses/base/lib_winch.c
        source/ncurses/base/lib_window.c source/ncurses/base/nc_panel.c
        source/ncurses/base/resizeterm.c source/ncurses/base/safe_sprintf.c
        source/ncurses/base/tries.c source/ncurses/base/use_window.c
        source/ncurses/base/version.c source/ncurses/base/vsscanf.c
        source/ncurses/base/wresize.c source/ncurses/widechar/lib_inwstr.c
        source/ncurses/tinfo/name_match.c source/ncurses/widechar/lib_in_wch.c
        source/ncurses/trace/lib_traceatr.c source/ncurses/widechar/lib_get_wstr.c
        source/ncurses/trace/lib_tracemse.c source/ncurses/trace/lib_tracedmp.c
        source/ncurses/tinfo/lib_kernel.c source/ncurses/tinfo/read_entry.c
        source/ncurses/tty/lib_tstp.c source/ncurses/widechar/charable.c
        source/ncurses/tinfo/use_screen.c source/ncurses/widechar/lib_ins_wch.c
        source/ncurses/widechar/lib_slk_wset.c source/ncurses/tinfo/lib_acs.c
        source/ncurses/widechar/lib_wunctrl.c source/ncurses/widechar/widechars.c
        source/ncurses/widechar/lib_hline_set.c source/ncurses/tinfo/lib_ttyflags.c
        source/ncurses/tinfo/lib_has_cap.c source/ncurses/tinfo/access.c
        source/ncurses/widechar/lib_wacs.c source/ncurses/tinfo/write_entry.c
        source/ncurses/tinfo/lib_cur_term.c source/ncurses/trace/trace_tries.c
        source/ncurses/tinfo/lib_data.c source/ncurses/tinfo/strings.c
        source/ncurses/trace/lib_tracechr.c source/ncurses/widechar/lib_key_name.c
        source/ncurses/tinfo/lib_print.c source/ncurses/tinfo/add_tries.c
        source/ncurses/trace/lib_trace.c source/ncurses/tinfo/make_hash.c
        source/ncurses/tinfo/lib_ti.c source/ncurses/tinfo/lib_setup.c
        source/ncurses/tinfo/lib_tgoto.c source/ncurses/widechar/lib_cchar.c
        source/ncurses/widechar/lib_vline_set.c source/ncurses/tinfo/getenv_num.c
        source/ncurses/tinfo/lib_termname.c source/ncurses/tinfo/comp_parse.c
        source/ncurses/widechar/lib_add_wch.c source/ncurses/tinfo/comp_error.c
        source/ncurses/trace/trace_xnames.c source/ncurses/tinfo/lib_options.c
        source/ncurses/tinfo/lib_raw.c source/ncurses/tty/lib_twait.c
        source/ncurses/widechar/lib_in_wchnstr.c source/ncurses/tinfo/comp_expand.c
        source/ncurses/tinfo/hashed_db.c source/ncurses/tinfo/comp_hash.c
        source/ncurses/widechar/lib_pecho_wchar.c source/ncurses/trace/trace_buf.c
        source/ncurses/tinfo/lib_napms.c source/ncurses/tinfo/trim_sgr0.c
        source/ncurses/tinfo/obsolete.c source/ncurses/tinfo/lib_tparm.c
        source/ncurses/tty/hardscroll.c source/ncurses/tinfo/alloc_entry.c
        source/ncurses/tinfo/db_iterator.c source/ncurses/tinfo/lib_termcap.c
        source/ncurses/tinfo/entries.c source/ncurses/tty/hashmap.c
        source/ncurses/tinfo/parse_entry.c source/ncurses/tty/lib_mvcur.c
        source/ncurses/widechar/lib_unget_wch.c source/ncurses/tinfo/read_termcap.c
        source/ncurses/widechar/lib_get_wch.c source/ncurses/tinfo/lib_baudrate.c
        source/ncurses/tinfo/captoinfo.c source/ncurses/tinfo/lib_tputs.c
        source/ncurses/tinfo/init_keytry.c source/ncurses/tinfo/comp_scan.c
        source/ncurses/trace/lib_tracebits.c source/ncurses/widechar/lib_box_set.c
        source/ncurses/tinfo/lib_longname.c source/ncurses/trace/varargs.c
        source/ncurses/tinfo/home_terminfo.c source/ncurses/tinfo/free_ttype.c
        source/ncurses/widechar/lib_erasewchar.c source/ncurses/tinfo/alloc_ttype.c
        source/ncurses/widechar/lib_vid_attr.c source/ncurses/tty/lib_vidattr.c
        source/ncurses/tty/tty_update.c source/ncurses/trace/visbuf.c
        source/form/f_trace.c source/form/fld_arg.c
        source/form/fld_attr.c source/form/fld_current.c
        source/form/fld_def.c source/form/fld_dup.c
        source/form/fld_ftchoice.c source/form/fld_ftlink.c
        source/form/fld_info.c source/form/fld_just.c
        source/form/fld_link.c source/form/fld_max.c
        source/form/fld_move.c source/form/fld_newftyp.c
        source/form/fld_opts.c source/form/fld_pad.c
        source/form/fld_page.c source/form/fld_stat.c
        source/form/fld_type.c source/form/fld_user.c
        source/form/form.h source/form/form.priv.h
        source/form/frm_cursor.c source/form/frm_data.c
        source/form/frm_def.c source/form/frm_driver.c
        source/form/frm_hook.c source/form/frm_opts.c
        source/form/frm_page.c source/form/frm_post.c
        source/form/frm_req_name.c source/form/frm_scale.c
        source/form/frm_sub.c source/form/frm_user.c
        source/form/frm_win.c source/form/fty_alnum.c
        source/form/fty_alpha.c source/form/fty_enum.c
        source/form/fty_generic.c source/form/fty_int.c
        source/form/fty_ipv4.c source/form/fty_num.c
        source/form/fty_regex.c source/form/llib-lform
        source/form/llib-lformt source/form/llib-lformtw
        source/form/llib-lformw source/menu/eti.h
        source/menu/llib-lmenu source/menu/llib-lmenut
        source/menu/llib-lmenutw source/menu/llib-lmenuw
        source/menu/m_attribs.c source/menu/m_cursor.c
        source/menu/m_driver.c source/menu/m_format.c
        source/menu/m_global.c source/menu/m_hook.c
        source/menu/m_item_cur.c source/menu/m_item_nam.c
        source/menu/m_item_new.c source/menu/m_item_opt.c
        source/menu/m_item_top.c source/menu/m_item_use.c
        source/menu/m_item_val.c source/menu/m_item_vis.c
        source/menu/m_items.c source/menu/m_new.c
        source/menu/m_opts.c source/menu/m_pad.c
        source/menu/m_pattern.c source/menu/m_post.c
        source/menu/m_req_name.c source/menu/m_scale.c
        source/menu/m_spacing.c source/menu/m_sub.c
        source/menu/m_trace.c source/menu/m_userptr.c
        source/menu/m_win.c source/menu/menu.h
        source/menu/menu.priv.h source/menu/mf_common.h
        source/panel/llib-lpanel source/panel/llib-lpanelt
        source/panel/llib-lpaneltw source/panel/llib-lpanelw
        source/panel/p_above.c source/panel/p_below.c
        source/panel/p_bottom.c source/panel/p_delete.c
        source/panel/p_hidden.c source/panel/p_hide.c
        source/panel/p_move.c source/panel/p_new.c
        source/panel/p_replace.c source/panel/p_show.c
        source/panel/p_top.c source/panel/p_update.c
        source/panel/p_user.c source/panel/p_win.c
        source/panel/panel.c source/panel/panel.h
        source/panel/panel.priv.h source/include/config.h
        source/include/curses.h source/include/eti.h
        source/include/form.h source/include/hashed_db.h
        source/include/hashsize.h source/include/menu.h
        source/include/mf_common.h source/include/nc_alloc.h
        source/include/nc_mingw.h source/include/nc_panel.h
        source/include/nc_string.h source/include/nc_termios.h
        source/include/nc_tparm.h source/include/ncurses.h
        source/include/ncurses_cfg.h source/include/ncurses_def.h
        source/include/ncurses_dll.h source/include/ncurses_mingw.h
        source/include/panel.h source/include/parametrized.h
        source/include/term.h source/include/term_entry.h
        source/include/termcap.h source/include/tic.h
        source/include/unctrl.h)

target_include_directories(ncurses
        INTERFACE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/source/include>
        PRIVATE
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/source>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/source/include>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/source/ncurses>)
